<?xml version="1.0" encoding="utf-8"?>
<!--
	menu.xml
	TKBirthdayReminder (c) Thomas Künneth 2009 - 2014
	Alle Rechte beim Autoren. All rights reserved.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
    <item android:id="@+id/new_entry"
        android:title="@string/menu_new_entry" />
    
    <item android:id="@+id/set_date"
        android:title="@string/menu_set_date" />

    <item android:id="@+id/set_alarm"
        android:title="@string/menu_set_alarm" />

    <item android:id="@+id/set_notification_days"
        android:title="@string/menu_set_notification_days" />

    <item android:id="@+id/set_notification_sound"
        android:title="@string/menu_set_notification_sound" />
        
    <item android:id="@+id/preferences"
        android:title="@string/settings" />
 
</menu>
